portainer/ingress.yml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: default
spec:
  ingressClassName: traefik-external
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.mandariini.uk`)
      kind: Rule
      services:
        - name: portainer
          namespace: portainer
          port: 9000
  tls:
    secretName: mandariini-uk-tls
