portainer/portainer.yml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: portainer
  namespace: portainer
  annotations: 
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`portainer.mandariini.uk`)
      kind: Rule
      services:
        - name: portainer
          port: 9000
  tls:
    secretName: mandariini-uk-tls
